Deleted duplicate comments

--- a/templates/index.html
+++ b/templates/index.html
@@ -206,12 +206,7 @@
       template: document.getElementById('app-template').innerHTML,
       data: {
         loadingPlaceId: null,
-        selectedPlace: null,  // object with attributes specified below
-          // title
-          // placeId
-          // imgs
-          // short_description
-          // long_description
+        selectedPlace: null,
       },
       computed: {
         promptVisible: function () {
